--- a/resume.html
+++ b/resume.html
@@ -88,6 +88,7 @@
                     <li><a href="index.html" class="nav_link">About</a></li>
                     <li><a href="resume.html" class="nav_link selected">Resume</a></li>
                     <li><a href="portfolio.html" class="nav_link">Portfolio</a></li>
+                    <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
             <section class="content_container" data-page="resume">
