styling protfolio section

--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,10 @@
                 <form action="">
                     <h3 class="form_title">Contact form</h3>
                     <div class="form_wrapper">
-                        <input type="text" required placeholder="Full name">
-                        <input type="email" required placeholder="Email address">
+                        <div class="input_wrapper">
+                            <input type="text" required placeholder="Full name">
+                            <input type="email" required placeholder="Email address">
+                        </div>
                         <textarea required placeholder="Your message"></textarea>
                         <button type="submit" class="send_button" disabled><ion-icon name="paper-plane"></ion-icon></ion-icon>Send message</button>
                     </div>
