--- a/portfolio.html
+++ b/portfolio.html
@@ -95,14 +95,24 @@
                 <header class="title">
                     <h1>Portfolio</h1>
                 </header>
-                <ul class="poritfolio_container">
-                    <li class="portfolio_items">
-                        <a href="./pokedex/index.html">
-                           <figure>
-                           </figure>
-                        </a>
-                    </li>
-                </ul>
+                <div class="projects_container">
+                    <ul>
+                        <li class="project_item active">
+                            <a href="#">
+                                <figure>
+                                    <div class="icon_eye_box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/project-1.jpg" alt="">
+                                </figure>
+                                <div class="description_content">
+                                    <h1>Something</h1>
+                                    <p>Something more</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </section>
         </article>
     </main>
