--- a/portfolio.html
+++ b/portfolio.html
@@ -111,6 +111,62 @@
                                 </div>
                             </a>
                         </li>
+                        <li class="project_item active">
+                            <a href="#">
+                                <figure>
+                                    <div class="icon_eye_box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/project-1.jpg" alt="">
+                                </figure>
+                                <div class="description_content">
+                                    <h1>Something</h1>
+                                    <p>Something more</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project_item active">
+                            <a href="#">
+                                <figure>
+                                    <div class="icon_eye_box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/project-1.jpg" alt="">
+                                </figure>
+                                <div class="description_content">
+                                    <h1>Something</h1>
+                                    <p>Something more</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project_item active">
+                            <a href="#">
+                                <figure>
+                                    <div class="icon_eye_box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/project-1.jpg" alt="">
+                                </figure>
+                                <div class="description_content">
+                                    <h1>Something</h1>
+                                    <p>Something more</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="project_item active">
+                            <a href="#">
+                                <figure>
+                                    <div class="icon_eye_box">
+                                        <ion-icon name="eye-outline"></ion-icon>
+                                    </div>
+                                    <img src="./assets/project-1.jpg" alt="">
+                                </figure>
+                                <div class="description_content">
+                                    <h1>Something</h1>
+                                    <p>Something more</p>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </section>
