fixing the font size

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </p>
                 </div>
                 <section class="skills_container">
-                    <header>
+                    <header class="subtitle">
                         <h1>My skills</h1>
                     </header>
                     <div class="my_skills">
