--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,9 @@
                     </figure>
                 </div>
                 <form action="">
-                    <h3 class="form_title">Contact form</h3>
+                    <header class="subtitle">
+                        <h1>Contact form</h1>
+                    </header>
                     <div class="form_wrapper">
                         <div class="input_wrapper">
                             <input type="text" required placeholder="Full name">
