finishing the large devices responsive style

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                             <input type="email" required placeholder="Email address">
                         </div>
                         <textarea required placeholder="Your message"></textarea>
-                        <button type="submit" class="send_button" disabled><ion-icon name="paper-plane"></ion-icon></ion-icon>Send message</button>
+                        <button type="submit" class="form_btn" disabled><ion-icon name="paper-plane"></ion-icon></ion-icon>Send message</button>
                     </div>
                 </form>
             </section>
