--- a/portfolio.html
+++ b/portfolio.html
@@ -91,79 +91,65 @@
                     <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
-            <section class="content_container" data-page="portfolio">
+            <section class="content_container">
                 <header class="title">
                     <h1>Portfolio</h1>
                 </header>
                 <div class="projects_container">
                     <ul>
-                        <li class="project_item active">
+                        <li class="project_item">
                             <a href="#">
-                                <figure>
+                                <figure class="project_img">
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
                                     <img src="./assets/project-1.jpg" alt="">
                                 </figure>
-                                <div class="description_content">
-                                    <h1>Something</h1>
-                                    <p>Something more</p>
+                                <div class="project_description">
+                                    <h3>Web developer</h3>
+                                    <p>My web project</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="project_item active">
+                        <li class="project_item">
                             <a href="#">
-                                <figure>
+                                <figure class="project_img">
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
                                     <img src="./assets/project-1.jpg" alt="">
                                 </figure>
-                                <div class="description_content">
-                                    <h1>Something</h1>
-                                    <p>Something more</p>
+                                <div class="project_description">
+                                    <h3>Web developer</h3>
+                                    <p>My web project</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="project_item active">
+                        <li class="project_item">
                             <a href="#">
-                                <figure>
+                                <figure class="project_img">
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
                                     <img src="./assets/project-1.jpg" alt="">
                                 </figure>
-                                <div class="description_content">
-                                    <h1>Something</h1>
-                                    <p>Something more</p>
+                                <div class="project_description">
+                                    <h3>Web developer</h3>
+                                    <p>My web project</p>
                                 </div>
                             </a>
                         </li>
-                        <li class="project_item active">
+                        <li class="project_item">
                             <a href="#">
-                                <figure>
+                                <figure class="project_img">
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
                                     <img src="./assets/project-1.jpg" alt="">
                                 </figure>
-                                <div class="description_content">
-                                    <h1>Something</h1>
-                                    <p>Something more</p>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="project_item active">
-                            <a href="#">
-                                <figure>
-                                    <div class="icon_eye_box">
-                                        <ion-icon name="eye-outline"></ion-icon>
-                                    </div>
-                                    <img src="./assets/project-1.jpg" alt="">
-                                </figure>
-                                <div class="description_content">
-                                    <h1>Something</h1>
-                                    <p>Something more</p>
+                                <div class="project_description">
+                                    <h3>Web developer</h3>
+                                    <p>My web project</p>
                                 </div>
                             </a>
                         </li>
