--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="profile_info">
                     <div class="border_separator"></div>
-                    <ul>
+                    <ul class="profile_info_more">
                         <li class="items_list">
                             <div class="icon_box"><ion-icon name="mail-outline"></ion-icon></i></div>
                             <div class="contact_info">
