html and css finished

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="profile_item_link">
                                 <span>EMAIL</span>
-                                <a href="mailto:wandersonsantospereira5@gmail.com">wandersonsantospereira5@gmail.com</a>
+                                <a href="mailto:wandersonsantospereira5@gmail.com" class="contact_link">wandersonsantospereira5@gmail.com</a>
                             </div>
                         </li>
                         <li class="profile_item">
@@ -95,7 +95,7 @@
                     <li><a href="contact.html" class="nav_link">Contact</a></li>
                 </ul>
             </nav>
-            <section class="content_container">
+            <section>
                 <header class="title">
                     <h1>About Me</h1>
                 </header>
