--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="profile_item_link">
                                 <span>EMAIL</span>
-                                <a href="mailto:wandersonsantospereira5@gmail.com">wandersonsantospereira5@gmail.com</a>
+                                <a href="mailto:wandersonsantospereira5@gmail.com" class="contact_link">wandersonsantospereira5@gmail.com</a>
                             </div>
                         </li>
                         <li class="profile_item">
@@ -95,7 +95,7 @@
                     <li><a href="contact.html" class="nav_link selected">Contact</a></li>
                 </ul>
             </nav>
-            <section class="content_container">
+            <section>
                 <header class="title">
                     <h1>Contact</h1>
                 </header>
@@ -108,7 +108,7 @@
                 </div>
                 <form action="">
                     <header class="subtitle">
-                        <h1>Contact form</h1>
+                        <h1>Contact Form</h1>
                     </header>
                     <div class="form_wrapper">
                         <div class="input_wrapper">
