--- a/resume.html
+++ b/resume.html
@@ -89,13 +89,13 @@
         <article>
             <nav id="navbar">
                 <ul>
-                    <li><a href="index.html" class="nav_link">About</a></li>
-                    <li><a href="resume.html" class="nav_link selected">Resume</a></li>
-                    <li><a href="portfolio.html" class="nav_link">Portfolio</a></li>
-                    <li><a href="contact.html" class="nav_link">Contact</a></li>
+                    <li><a href="index.html" class="nav_link" data-nav-link>About</a></li>
+                    <li><a href="resume.html" class="nav_link marked" data-nav-link>Resume</a></li>
+                    <li><a href="portfolio.html" class="nav_link" data-nav-link>Portfolio</a></li>
+                    <li><a href="contact.html" class="nav_link" data-nav-link>Contact</a></li>
                 </ul>
             </nav>
-            <section>
+            <section data-page="resume">
                 <header class="title">
                     <h1>Resume</h1>
                 </header>
