knowledge area content started

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
+    <!-- Phosphor Icons -->
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -113,21 +116,51 @@
                          type and scrambled it to make a type specimen book.
                     </p>
                 </div>
-                <section class="skills_container">
-                    <header class="subtitle">
-                        <h1>My skills</h1>
-                    </header>
-                    <div class="my_skills">
-                        <ul>
-                            <li class="skills_items">
-                            </li>
-                            <li class="skills_items"></li>
-                            <li class="skills_items"></li>
-                            <li class="skills_items"></li>
-                        </ul>
+                <header class="subtitle">
+                    <h1>Knowledge Areas</h1>
+                </header>
+                <section class="content_modal">
+                    <div class="items">
+                        <figure class="image">
+                            <img src="./assets/icon-dev.svg" alt="Web Developer Icon" width="40">
+                        </figure>
+                        <figcaption>Web Development</figcaption>
+                        <p class="description_area">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry
+                        </p>
+                    </div>
+                    <div class="items">
+                        <figure class="image">
+                            <img src="./assets/computer-service.svg" alt="Technical Support Icon" width="40">
+                        </figure>
+                        <figcaption>Technical Support</figcaption>
+                        <p class="description_area">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry
+                        </p>
+                    </div>
+                    <div class="items">
+                        <figure class="image"><img src="./assets/english.svg" alt="English Speaker Icon" width="40"></figure>
+                        <figcaption>Advanced English</figcaption>
+                        <p class="description_area">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry
+                        </p>
+                    </div>
+                    <div class="items">
+                        <figure class="image"><img src="./assets/desktop-tower.svg" alt=""></figure>
+                        <figcaption>Computer Network</figcaption>
+                        <p class="description_area">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                            industry
+                        </p>
                     </div>
                 </section>
-            </section>
         </article>
     </main>
 
