--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
-                                    <img src="./assets/project-1.jpg" alt="">
+                                    <img src="./assets/project-4.png" alt="">
                                 </figure>
                                 <div class="project_description">
                                     <h3>Web developer</h3>
@@ -121,7 +121,7 @@
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
-                                    <img src="./assets/project-1.jpg" alt="">
+                                    <img src="./assets/project-5.png" alt="">
                                 </figure>
                                 <div class="project_description">
                                     <h3>Web developer</h3>
@@ -135,7 +135,7 @@
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
-                                    <img src="./assets/project-1.jpg" alt="">
+                                    <img src="./assets/project-8.jpg" alt="">
                                 </figure>
                                 <div class="project_description">
                                     <h3>Web developer</h3>
@@ -149,7 +149,7 @@
                                     <div class="icon_eye_box">
                                         <ion-icon name="eye-outline"></ion-icon>
                                     </div>
-                                    <img src="./assets/project-1.jpg" alt="">
+                                    <img src="./assets/project-9.png" alt="">
                                 </figure>
                                 <div class="project_description">
                                     <h3>Web developer</h3>
