stating skills content

--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
-    <!-- Phosphor Icons -->
-    <script src="https://unpkg.com/@phosphor-icons/web"></script>
-
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -119,48 +116,136 @@
                 <header class="subtitle">
                     <h1>Knowledge Areas</h1>
                 </header>
-                <section class="content_modal">
-                    <div class="items">
-                        <figure class="image">
-                            <img src="./assets/icon-dev.svg" alt="Web Developer Icon" width="40">
-                        </figure>
-                        <figcaption>Web Development</figcaption>
-                        <p class="description_area">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting 
-                            industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
-                            industry
-                        </p>
-                    </div>
-                    <div class="items">
-                        <figure class="image">
-                            <img src="./assets/computer-service.svg" alt="Technical Support Icon" width="40">
-                        </figure>
-                        <figcaption>Technical Support</figcaption>
-                        <p class="description_area">
-                            Lorem Ipsum is simply dummy text of the printing and typesetting 
-                            industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
-                            industry
-                        </p>
-                    </div>
-                    <div class="items">
-                        <figure class="image"><img src="./assets/english.svg" alt="English Speaker Icon" width="40"></figure>
+                <div class="content_modal">
+                    <ul>
+                        <li class="items">
+                            <figure class="image">
+                                <img src="./assets/icon-dev.svg" alt="Web Developer Icon" width="40">
+                            </figure>
+                            <figcaption>Web Development</figcaption>
+                            <p class="description_area">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                industry
+                            </p>
+                        </li>
+                        <li class="items">
+                            <figure class="image">
+                                <img src="./assets/computer-service.svg" alt="Technical Support Icon" width="40">
+                            </figure>
+                            <figcaption>Technical Support</figcaption>
+                            <p class="description_area">
+                                Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                industry
+                            </p>
+                        </li>
+                        <li class="items">
+                            <figure class="image">
+                                <img src="./assets/english.svg" alt="English Speaker Icon" width="40">
+                            </figure>
                         <figcaption>Advanced English</figcaption>
                         <p class="description_area">
                             Lorem Ipsum is simply dummy text of the printing and typesetting 
                             industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
                             industry
                         </p>
-                    </div>
-                    <div class="items">
-                        <figure class="image"><img src="./assets/desktop-tower.svg" alt=""></figure>
+                        </li>
+                        <li class="items">
+                            <figure class="image"><img src="./assets/desktop-tower.svg" alt=""></figure>
                         <figcaption>Computer Network</figcaption>
                         <p class="description_area">
                             Lorem Ipsum is simply dummy text of the printing and typesetting 
                             industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
                             industry
                         </p>
-                    </div>
-                </section>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="skills_container">
+                    <header class="subtitle">
+                        <h1>My skills</h1>
+                    </header>
+                    <ul class="skills_list has_scrollbar">
+                        <li class="skill_item">
+                            <figure class="skills_img">
+                                <img src="./assets/html-5.svg" alt="" width="60">
+                            </figure>
+                            <div class="skills_description">
+                                <h3>Lorem Ipsum</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry 
+                                </p>
+                            </div>
+                        </li>
+                        <li class="skill_item">
+                            <figure class="skills_img">
+                                <img src="./assets/html-5.svg" alt="" width="60">
+                            </figure>
+                            <div class="skills_description">
+                                <h3>Lorem Ipsum</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry 
+                                </p>
+                            </div>
+                        </li>
+                        <li class="skill_item">
+                            <figure class="skills_img">
+                                <img src="./assets/html-5.svg" alt="" width="60">
+                            </figure>
+                            <div class="skills_description">
+                                <h3>Lorem Ipsum</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry 
+                                </p>
+                            </div>
+                        </li>
+                        <li class="skill_item">
+                            <figure class="skills_img">
+                                <img src="./assets/html-5.svg" alt="" width="60">
+                            </figure>
+                            <div class="skills_description">
+                                <h3>Lorem Ipsum</h3>
+                                <p>
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                    industry 
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="modal_container">
+                    <div class="overlay"></div>
+                    <section class="skills_modal">
+                        <button class="close_btn">
+                            <ion-icon name="close-outline"></ion-icon>
+                        </button>
+                        <ul class="modal_wrapper">
+                            <li class="modal_item">
+                                <figure class="modal_img">
+                                    <img src="./assets/html-5.svg" alt="" width="80">
+                                    <div class="modal_content">
+                                        <h4>Lorem Ipsum</h4>
+                                        <p>
+                                            Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                            industry. Lorem Ipsum is simply dummy text of the printing and typesetting 
+                                            industry
+                                        </p>
+                                    </div>
+                                </figure>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
         </article>
     </main>
 
